# nyaa-hs

./: .gitignore  README.md  stack.yaml
.githooks/: post-commit
.github/workflows/: hs-test.yml  update-readme-hash.yml
app/: Main.hs
src/: Nyaa.hs
src/Nyaa/: Types.hs
src/Nyaa/Internal/: Utils.hs
src/Nyaa/Internal/Parser/: Html.hs
src/Nyaa/Site/: Nyaa.hs
test/: LICENSE  Spec.hs  nyaa.cabal
test/Nyaa/: CategoriesSpec.hs  MagnetSpec.hs
test/Nyaa/Internal/: UtilsSpec.hs
test/Nyaa/Internal/Parser/: HtmlSpec.hs  RssSpec.hs
test/fixtures/: detail.html  listing.html  search.rss
test/src/Nyaa/: Categories.hs  Magnet.hs  Search.hs
test/src/Nyaa/Internal/: Http.hs  Parser.hs
test/src/Nyaa/Internal/Parser/: Rss.hs
test/src/Nyaa/Site/: Sukebei.hs
